# datazaur

./: .gitignore  Dockerfile  README.md  dummy_req.py  evaluate.py  pyproject.toml
data/evals/: my_test_run.jsonl  my_test_run_metrics.json  tomorrow.jsonl  tomorrow4.jsonl  tomorrow4_metrics.json  tomorrow_metrics.json
scripts/: build_index.py
src/: main.py
static/: index.html
